Add file_manager::util::GetCrostiniMountPointName

Refactored this code out so it can be used in tests.

Bug: 845830
Change-Id: Id6b6f9ed35c38dcea114bcd4f18431ae0d3aafde
Reviewed-on: https://chromium-review.googlesource.com/1089603
Commit-Queue: Joel Hockey <joelhockey@chromium.org>
Reviewed-by: Stuart Langley <slangley@chromium.org>
Cr-Commit-Position: refs/heads/master@{#565164}
Former-commit-id: 9867e6aab3d874d0b9e61e1da0920a375cb5a4c2