chrome/browser/chromeos/file_manager/path_util.h
@@ -43,6 +43,9 @@ bool MigratePathFromOldFormat(Profile* profile,
 // The canonical mount point name for "Downloads" folder.
 std::string GetDownloadsMountPointName(Profile* profile);
 
+// The canonical mount point name for crostini "Linux Files" folder.
+std::string GetCrostiniMountPointName(Profile* profile);
+
 // DEPRECATED. Use |ConvertToContentUrls| instead.
 // While this function can convert paths under Downloads, /media/removable
 // and /special/drive, this CANNOT convert paths under ARC media directories
